[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = [
    "Seth <seth@gmail.com>",
]
description = "A kv store base on memory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = [
    "derive",
    "env",
] }
failure = "0.1.8"
serde_json = "1.0.96"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
tempfile = "3.5.0"
walkdir = "2.3.3"
