[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = [
    "Seth <seth@gmail.com>",
]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = [
    "derive",
    "env",
] }
serde = { version = "1.0.163", features = [
    "derive",
] }
serde_json = "1.0.96"
sled = "0.34.7"
thiserror = "1.0.40"

[dev-dependencies]
assert_cmd = "2.0.11"
criterion = "0.5.1"
predicates = "3.0.3"
rand = "0.8.5"
tempfile = "3.5.0"
walkdir = "2.3.3"
